[package]
name = "RocketSession"
version = "0.1.0"
authors = ["Nightloewe <nightloewe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rocket"]

[dependencies]
chrono = "^0.4.19"
serde = "^1.0"
erased-serde = "^0.3"
rand = "^0.8"

[dependencies.rocket]
version = "^0.4.7"
optional = true